tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__styles__dotted_shorthand.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Dotted, Line[{{0, 0}, {1, 1}}]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<polyline points="13.33,346.67 346.67,13.33" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt" stroke-dasharray="1.0,4.0"/>
</g>
</svg>
